removed the span tags

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <h1>Rock Paper Scissors</h1>
         <button onclick="game()">Start Game</button>
         <p class="info">This game is played in the console. 
-        <br>
-        On Windows/Linux press <span>"CTRL + Shift + J"</span> to open the console.
-        <br>
-        On Mac, press <span> "Option + J"</span> to open the console.
+            <br>
+        On Windows/Linux press " <kbd>ctrl</kbd> + <kbd>shift</kbd> + <kbd>J</kbd> " to open the console.
+       <br>
+        On Mac, press  " <kbd>Option</kbd> + <kbd>J</kbd> " to open the console.
         </p>
     </div>
 
