--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./hand-back-fist-solid.svg">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
 </head>
 
 <body>
     <h1 id="heading">Rock Paper Scissors</h1>
+    <h1 id="heading"><i class="fa-solid fa-hand-back-fist fa-shake"></i> <i class="fa-solid fa-hand fa-shake"></i> <i class="fa-solid fa-hand-scissors fa-shake"></i></h1>
 
     <div id="game">
        
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock"><i class="fa-solid fa-hand-back-fist fa-beat"></i> Rock</button>
+        <button id="paper"><i class="fa-solid fa-hand fa-beat"></i> Paper</button>
+        <button id="scissors"><i class="fa-solid fa-hand-scissors fa-beat"></i> Scissors</button>
         <div id="result">Result:</div>
         <div id="playerScore">Score: 0</div>
         <div id="computerScore">Score: 0</div>
         <div id="gameOver"></div>
     </div>
+
+    <footer>
+        <p>Copyright &copy; Praveen Singh 2023 <i class="fa-brands fa-github"></i></p>
+    </footer>
 
     <!-- This is JS -->
     <script src="script.js"></script>
