css for footer adjusted

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div id="gameOver"></div>
     </div>
 
-    <footer>
-        <p>Copyright &copy; Praveen Singh 2023 <i class="fa-brands fa-github"></i></p>
+    <footer id="footer">
+        <p>Copyright &copy; Praveen Singh 2023 <i class="fa-brands fa-github fa-beat"></i></p>
     </footer>
 
     <!-- This is JS -->
