removed excess code from JS and changed text in HTML score

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <button id="paper"><i class="fa-solid fa-hand fa-beat"></i> Paper</button>
         <button id="scissors"><i class="fa-solid fa-hand-scissors fa-beat"></i> Scissors</button>
         <div id="result">Result:</div>
-        <div id="playerScore">Score: 0</div>
-        <div id="computerScore">Score: 0</div>
+        <div id="playerScore">Your Score: 0</div>
+        <div id="computerScore">Computer Score: 0</div>
         <div id="gameOver"></div>
     </div>
 
