--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </div>
 
     <footer id="footer">
-        <p>Copyright &copy; Praveen Singh 2023 <i class="fa-brands fa-github fa-beat"></i></p>
+        <p><i class="fa-brands fa-github fa-beat"></i> Copyright &copy; Praveen Singh <script>
+            document.write(new Date().getFullYear())
+          </script> <i class="fa-solid fa-heart fa-beat" style="color: #ff004f;"></i></a></p>
     </footer>
 
     <!-- This is JS -->
