--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     </div>
 
     <footer id="footer">
-        <p><i class="fa-brands fa-github fa-beat"></i> Copyright &copy; Praveen Singh <script>
-            document.write(new Date().getFullYear())
-          </script> <i class="fa-solid fa-heart fa-beat" style="color: #ff004f;"></i></a></p>
+        <p><i class="fa-brands fa-github fa-beat"></i> Copyright &copy; <span id="copyright-year"></span> Praveen Singh <i class="fa-solid fa-heart fa-beat" style="color: #ff004f;"></i></a></p>
     </footer>
 
     <!-- This is JS -->
